fix: prevent overflow in code editor's HTML viewer

--- a/src/pages/component/_template/code-editor.scss
+++ b/src/pages/component/_template/code-editor.scss
@@ -46,6 +46,9 @@
 
 .html-view {
   padding: .5em 1em;
+  /* NOTE: questionable... */
+  overflow-x: hidden;
+  contain: inline-size;
 }
 
 .code-editor {
